@@ -9,6 +9,7 @@ license             = Perl_5
 [@Author::ETHER]
 :version = 0.103
 Test::MinimumVersion.max_target_perl = 5.008003
+-remove = MetaTests ; until Test::CPAN::Meta is fixed
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
@@ -24,3 +25,7 @@ x_MailingList = http://dzil.org/#mailing-list
 
 [Test::CheckBreaks]
 conflicts_module = Moose::Conflicts
+
+[Deprecated]
+:version = 0.003
+module = Dist::Zilla::Plugin::GenerateFile::ShareDir
