@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-Plugin-GenerateFile-FromShareDir
 
 {{$NEXT}}
+          - renamed this plugin and distribution; [GenerateFile::ShareDir]
+            will live on for now in deprecated form
 
 0.007     2015-10-30 03:11:38Z
           - some logic abstracted out to Dist::Zilla::Role::RepoFileInjector
